--- a/css/styles.css
+++ b/css/styles.css
@@ -133,3 +133,37 @@ nav {
 .fa-comments {
     color: #ef8f29;
 }
+
+.specialties-container ul li h3 {
+    margin-bottom: 25px;
+}
+
+.specialties-container ul li p {
+    line-height: 24px;
+}
+
+/* preços */
+
+.pricing-container {
+    padding-bottom: 5rem;
+    text-align: center;
+}
+
+.pricing-container h1 {
+    font-size: 36px;
+    margin-top: 0;
+}
+
+.pricing-container p {
+    font-size: 20px;
+}
+
+.plans-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    width: 90%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
