--- a/css/styles.css
+++ b/css/styles.css
@@ -326,51 +326,60 @@ footer{
 
 /* responsivo */
 
-@media screen and ( max-width: 1100px ) {
-    .plans-container{
-        width: 95px;
-    }
-    .plan {
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-}
+@media screen and (max-width: 1100px) {
 
-@media screen and ( max-width: 900px ) {
-    .plans-container, .specialties-container ul {
-        flex-wrap: wrap;
-    }
-}
+	.plans-container {
+		width: 95%;
+	}
 
-@media screen and ( max-width: 576px ) {
-    html, body {
-        overflow-x: hidden;
-    }
+	.plan {
+		margin-left: 5px;
+		margin-right: 5px;
+	}
 
-    .navbar-items li {
-        font-size: 12px;
-        margin-left: 10px;
-    }
+} 
 
-    .plan {
-        width: 100%;
-        max-width: 100%;
-    }
+@media screen and (max-width: 900px) {
 
-    .searchdomain-container, .contact-container {
-        padding: 3em 2em;
-    }
+	.plans-container, .specialties-container ul {
+		flex-wrap: wrap;
+	}
 
-    .container .searchdomain-container input {
-        width: 100%;
-        box-sizing: border-box;
-    }
+} 
 
-    .contact-container input, .contact-container textarea {
-        width: 100%;
-        display: block;
-        margin-left: 0;
-        margin-right: 0;
-        box-sizing: border-box;
-    }
+@media screen and (max-width: 576px) {
+
+	.navbar-items li {
+		font-size: 12px;
+		margin-left: 10px;
+	}
+
+	html, body {
+	  overflow-x:hidden 
+	}
+
+	.plan {
+		max-width: 100%;
+	}
+
+	.searchdomain-container {
+		padding: 3em 2em;
+	}
+
+	.container .searchdomain-container input {
+		width: 100%;
+		box-sizing: border-box;
+	}
+
+	.contact-container {
+		padding: 3em 2em;
+	}
+
+	.contact-container input, .contact-container textarea {
+		width: 100%;
+		display: block;
+		margin-left: 0;
+		margin-right: 0;
+		box-sizing: border-box;
+	}
 }
